# ich-erp

./: Cargo.toml  docker-compose.dev.yaml  docker-compose.prod.yaml
apps/api/: Cargo.toml
apps/api/src/: error.rs  extractors.rs  logger.rs  main.rs  routes.rs
apps/api/src/extractors/: auth_context.rs  authenticated_user.rs  validator.rs
apps/api/src/handler/: auth.rs  user.rs
apps/api/src/handlers/: auth_handler.rs  permission_handler.rs  role_handler.rs  user_handler.rs
apps/api/src/middleware/: auth.rs
apps/api/src/middlewares/: auth_middleware.rs
apps/api/src/routes/: v1.rs
apps/api/src/routes/v1/: auth.rs  auth_route.rs  permission_route.rs  role_route.rs  user.rs  user_route.rs
apps/iops/: .gitignore  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/iops/src/: App.tsx  index.css  routeTree.gen.ts
apps/iops/src-tauri/: Cargo.toml  tauri.conf.json
apps/iops/src-tauri/capabilities/: default.json
apps/iops/src-tauri/src/: error.rs  helper.rs  lib.rs  main.rs
apps/iops/src-tauri/src/apis/: auth.rs  role.rs  user.rs
apps/iops/src/components/: app-sidebar.tsx  data-table.tsx  forgot-password-form.tsx  login-form.tsx  nav-header.tsx  nav-main.tsx  nav-user.tsx
apps/iops/src/components/ui/: sheet.tsx  sidebar.tsx
apps/iops/src/contexts/: auth-context.tsx  theme-context.tsx
apps/iops/src/features/: login.tsx
apps/iops/src/lib/: api.ts
apps/iops/src/routes/: __root.tsx  _admin.roles.tsx  _admin.tsx  _admin.users.tsx  _auth.forgot-password.tsx  _auth.login.tsx  _auth.tsx  forgot-password.tsx  index.tsx  login.tsx
apps/worker/: Cargo.toml
apps/worker/src/: config.rs  consumer.rs  email.rs  gmail_oauth.rs  main.rs
db/: Dockerfile
db/initdb/: 001_init.sql  002_trigger.sql  003_partition.sql  005_seed.sql
db/seed/: permissions.csv  role_permissions.csv  roles.csv  user_roles.csv  users.csv
libs/application/: Cargo.toml
libs/application/services/: auth.service.rs
libs/application/src/: dto.rs  error.rs  errors.rs  lib.rs  ports.rs  security.rs  services.rs
libs/application/src/dto/: auth_dto.rs  pagination_dto.rs  role_dto.rs  user_dto.rs
libs/application/src/security/: password.rs  session_token.rs
libs/application/src/services/: account_service.rs  auth_service.rs  permission_service.rs  role_service.rs  user_service.rs
libs/domain/: Cargo.toml
libs/domain/src/: cache.rs  entities.rs  errors.rs  lib.rs  repositories.rs  upload.rs
libs/domain/src/entities/: cached_session.rs  password_token.rs  permission.rs  role.rs  session.rs  user.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: cache.rs  lib.rs  messaging.rs  repositories.rs
libs/infrastructure/src/cache/: session.rs
libs/infrastructure/src/messaging/: email_publisher.rs  lapin_pool.rs
libs/infrastructure/src/persistence/: error.rs
libs/infrastructure/src/postgres/: pool.rs
libs/infrastructure/src/repositories/: pg_password_token_repository.rs  pg_permission_repository.rs  pg_role_repositories.rs  pg_user_repositories.rs  pg_user_session_repositories.rs
libs/infrastructure/src/storage/: r2.rs
libs/shared/: Cargo.toml
libs/shared/src/: config.rs  messaging.rs
