[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

application = { path = "../../libs/application" }


axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true