[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

domain = { path = "../../libs/domain" }
infrastructure = { path = "../../libs/infrastructure" }
application = { path = "../../libs/application" }
shared = { path = "../../libs/shared" }


axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
chrono.workspace = true
time.workspace = true
