[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../libs/shared" }

tokio.workspace = true
lapin.workspace = true
futures-lite.workspace = true
lettre.workspace = true
reqwest = { workspace = true, features = ["form"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
